# lexi

./: .gitignore  LEXI_fn.py  LICENSE  README.md  lexi_functions_test.py  lexi_install_instructions.md  lexi_sample_code.py  lexi_test_script.py  lexi_tutorial.ipynb  pyproject.toml  setup.py
data/: .~lock.sample_lexi_pointing_ephem_edited.csv#  2022_04_28_1313_LEXI_Sci_unit1_mcp_unit1_eBox_1900V_counts.pickle  PIT_shifted_jul08.cdf  exposure_map_xres_0.1_yres_0.1_tres_100L.npy  gp_data_3.0_10_0.0_0.8_4_Matern.pickle
data/exposure_maps/: exposure_map_rares_3_decres_3_tstep_3_t0_2024-07-08 15:01:00_tf_2024-07-09 15:01:00.npy  exposure_map_rares_3_decres_3_tstep_3_t0_2024-07-08 21:43:41_tf_2024-07-08 21:48:41.npy  exposure_map_rares_3_decres_3_tstep_3_t0_20240708_214341_tf_20240708_214748_tint_247.0.npy  lexi_exposure_map_Tstart_20240708_214341_Tstop_20240708_214741_RAstart_300_RAstop_345_RAres_1_DECstart_45_DECstop_90_DECres_1_Tint_240.npy  lexi_exposure_map_Tstart_20240708_214341_Tstop_20240708_214741_RAstart_320_RAstop_345_RAres_2_DECstart_-14.32958163_DECstop_-14.3118735_DECres_2_Tint_240.npy  (+6 more)
data/gp_models/: gp_data_3.0_10_0.0_0.8_4_DotProduct(sigma_0=1) + WhiteKernel(noise_level=1).pickle  (+30 more)
docs/: hackathon_v01_2023022
examples/: lexi_install_instructions.md  lexi_tutorial.ipynb  lexi_tutorial.py
lexi/: README.md  __init__.py  array_to_image.py  cdf_sample_file.py  data_product_test.py  discorpy_test.py  discorpy_test_lexi.py  distortion_minimization.py  generate_xray_background.py  get_spc_params.py  gp_read.py  gp_test_cases.py  hist_data.py  lexi.py  lexi_functions.py  lexi_functions_test.py  lexi_no_class.py  lexi_no_class_test.py  lxi_code_plan.py  lxi_exposure_map_fnc.py  lxi_non_lin_corr_20240122.py  lxi_non_lin_corr_20240123.py  lxi_read_binary_data.py  make_histogram.py  plot_sample_xray_background.py  read_xray_background.py  test.py  test_code.py  test_xy2radec.py  text_color_fncs.py
(+34 files in other folders)
