[tool.poetry]
name = "lexi"
version = "0.0.1"
description = "Main repository for all data analysis related to LEXI"
authors = ["qudsiramiz <qudsiramiz@gmail.com>"]
maintainers = [
    "Brian Walsh <bwalsh@bu.edu>",
    "Jane Smith <janesmith@example.org>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
spacepy = "^0.4.1"
pandas = "^2.2.0"
tabulate = "^0.9.0"
wand = "^0.6.13"
discorpy = "^1.6.0"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
notebook = "^7.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
