[tool.poetry]
name = "lexi"
version = "0.0.1"
description = "Main repository for all data analysis related to LEXI"
authors = ["qudsiramiz <qudsiramiz@gmail.com>"]
maintainers = [
    "Brian Walsh <bwalsh@bu.edu>",
    "Jane Smith <janesmith@example.org>",
]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
spacepy = "^0.4.1"
pandas = "^2.2.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
notebook = "^7.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
